# kernel-ai-bootcamp-llm

./: README.md
Day1/: .gitignore  01_langchain_llm_basics.ipynb  02_langgraph_essentials.ipynb  03_langgraph_messages_state.ipynb  04_langgraph_nodes_edges.ipynb  05_langgraph_tools_chatbot.ipynb  06_structured_output.ipynb  README.md  pyproject.toml  requirements.txt
Day2/: 01_basic_rag_chromadb.ipynb  README.md  pyproject.toml  requirements.txt
Day2/01_basic_rag_chromadb/: README.md  nodes.py  retriever.py  state.py
Day2/02_relevance_grading_rag/: README.md  nodes.py  retriever.py
Day2/03_hallucination_grading_rag/: nodes.py
Day2/04_agentic_rag_websearch/: graph.py  nodes.py  retriever.py  state.py
Day3/: 01_langchain_create_agent.ipynb  02_web_search_agent.ipynb  03_builtin_middleware.ipynb  04_custom_middleware.ipynb  05_final_project.ipynb  README.md  pyproject.toml
