[project]
name = "llm-day1"
version = "1.0.0"
description = "LangChain & LangGraph 실습 - Day 1"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.0.0",
    "langchain-openai>=1.0.0",
    "langchain-core>=1.0.0",
    "langchain-community",
    "arxiv>=2.4.0",
    "langgraph>=1.0.0",
    "python-dotenv>=1.0.0",
    "jupyter>=1.1.0",
    "ipykernel>=6.29.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.12.0",
    "pymupdf>=1.27.0"
]
