[project]
name = "llm-day2"
version = "1.0.0"
description = "Agentic RAG 실습 - Day 2"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.0.0",
    "langchain-openai>=1.0.0",
    "langchain-core>=1.0.0",
    "langchain-community",
    "langgraph>=1.0.0",
    "langgraph-cli[inmem]>=0.4.0",
    "python-dotenv>=1.0.0",
    "jupyter>=1.1.0",
    "ipykernel>=6.29.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.12.0",
    "pypdf>=6.7.0",
    "langchain-chroma>=1.1.0",
    "rank_bm25>=0.2.2"
]
